[project]
name = "un-locode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4==4.12.3",
    "chardet==5.2.0",
    "cloudscraper==1.2.71",
    "pandas==2.2.3",
    "requests==2.32.3",
    "titlecase==2.4.1",
]
